fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@
 }
 span{
   color: yellow;
+  font-size: 60px;
 }
 
 
